--- a/css/style.css
+++ b/css/style.css
@@ -95,14 +95,14 @@ cursor: pointer;
 
 .burger_btn {
   border:0;
-  background-color: white;
+  background-color: transparent;
 }
 
 .checkbox {
   position: absolute;
   width: 48px;
   height: 48px;
-  z-index: 3;
+  z-index: 10;
   right: 63px;
   opacity: 0; 
 }
@@ -151,8 +151,6 @@ cursor: pointer;
 .item_burger {
 margin-bottom: 48px;
 }
-
-
 
 .close_btn {
   cursor: pointer;
@@ -229,9 +227,9 @@ margin-bottom: 48px;
   font-family: 'Montserrat', sans-serif;
   font-size: 28px;
   color: rgba(0, 91, 187, 1);
-  line-height: 39px;
   margin: 0 auto 17px auto;
   max-width: 1024px;
+  line-height: 140%;
 }
 
 /* 2 секція */
@@ -240,6 +238,7 @@ margin-bottom: 48px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   font-size: 40px;
+  letter-spacing: 0.06em;;
   color: rgba(0, 91, 187, 1);
   border-bottom: solid 1px rgba(0, 91, 187, 1);
   max-width: 500px;
@@ -257,10 +256,10 @@ margin-bottom: 48px;
 }
 
 .stories {
-  margin: 40px 0 80px 0;
+  margin: 40px 0 0 0;
   display: flex;
   justify-content: space-between;
-  padding: 0 60px;
+
 }
 
 .stories_item {
@@ -269,6 +268,7 @@ margin-bottom: 48px;
   border-left: solid 10px rgba(255, 213, 0, 1);
   display: table;
   padding: 40px 40px 40px 30px;
+  margin: 0 14px;
 }
 
 .stories_text {
@@ -278,6 +278,7 @@ margin-bottom: 48px;
   line-height: 25px;
   display: table-cell;
   vertical-align: middle;
+  line-height: 140%;
 
 }
 
@@ -285,10 +286,6 @@ margin-bottom: 48px;
   color: rgba(255, 255, 255, 1);
   font-family: 'Montserrat', sans-serif;
   font-size: 48px;
-}
-
-.footer {
-  padding: 0 60px;
 }
 
 .input_area {
@@ -355,11 +352,12 @@ and (max-width: 1199px) {
 
 .stories {
   display: block;
+  padding: 0 60px;
 }
 
 .stories_item {
   width: 100%;
-  margin-bottom: 28px;
+  margin-top: 28px;
 }
 
 .nav_list {
@@ -394,13 +392,127 @@ and (max-width: 1199px) {
 }
  .input_area {
   margin-bottom: 119px;
- }
+}
+.footer {
+  padding: 0 60px;
+}
 
+}
 /* mobile */
 
 @media only screen
 
 and (min-width: 320px)
 and (max-width: 767px) {
+
+  .logo,
+  .nav_list {
+    display:none;
+  }
+
+  .stories {
+    display: block;
+    padding: 0 20px;
+  }
+
+  .stories_item {
+    width: 100%;
+    padding: 30px 30px 30px 20px;
+    margin: 0;
+    margin-top: 28px;
+  }
+
+  .stories_text {
+    font-size: 16px;
+  }
+  
+
+  .gallery img {
+    min-width: 375px;
+    margin: 0 auto 40px auto;
+  
+  }
+
+  .burger {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    right: 20px;
+    top: 20px;
+  }
+
+  .burger_icon path {
+    fill: rgb(255, 255, 255);
+  }
+
+ .checkbox {
+   background-color:black;
+   top: 0px;
+   right: 3px;
+ }
+
+ .info {
+  font-size: 16px;
+ }
+
+ .title {
+  font-size: 20px;
+  height: 56px;
+}
+
+  .paragraphs {
+    padding: 0 20px;
+  }
+
+  .year {
+    display: block;
+    font-size: 24px;
+    line-height: 29px;
+  }
+
+  .section {
+    margin: 56px auto 0 auto;
+  }
+
+  .footer {
+    padding: 0 20px;
+  }
+
+  .input_area{
+    position: relative;
+    display:flex;
+    justify-content: center;
+    min-height: 150px;
+  }
+
+  .input {
+    margin: 0;
+  }
+
+  .btn {
+  position: absolute;
+  top: 169px;
+  width: 100%;
+  margin:0;
+  }
+
+  .burger_menu {
+   min-width: 100%;
+   height: 100%;
+  }
+
+  .burger_section {
+    padding: 20px;
+    top: 0;
+    position: fixed;
+    height: 100%;
+
+  }
+
+  .white_logo {
+    width: 54px;
+    height: 47px;
+  }
+
 
 }
