--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,17 @@ h1 {
 padding: 80px 0;
 width: 70px;
 margin: 0 auto;
+transition: 0.5s;
 }
+
+.logo svg * {
+  transition: 0.5s;
+  }
 
 .logo:hover svg * {
 fill: #FFD500;
 cursor: pointer;
+
 }
 
 .nav_list {
@@ -95,7 +101,8 @@ cursor: pointer;
 
 .burger_btn {
   border:0;
-  background-color: transparent;
+  background-color:  #c7d9e4;
+  border-radius: 10%;
 }
 
 .checkbox {
@@ -156,6 +163,8 @@ margin-bottom: 48px;
   cursor: pointer;
 }
 
+/* Gallery */
+
 .gallery {
   max-width: 1312px;
 }
@@ -184,11 +193,8 @@ margin-bottom: 48px;
 }
 
 .nav_item:hover {
-  font-size: 25px;
-
+  letter-spacing: 1.05rem;
 }
-
-
 
 /* slider */
 
@@ -232,7 +238,7 @@ margin-bottom: 48px;
   line-height: 140%;
 }
 
-/* 2 секція */
+/* 2 section */
 
 .title {
   font-family: 'Montserrat', sans-serif;
@@ -288,6 +294,8 @@ margin-bottom: 48px;
   font-size: 48px;
 }
 
+/* 3 section  */
+
 .input_area {
   height: 120px;
   border: solid 1px rgba(0, 91, 187, 1);
@@ -316,7 +324,8 @@ margin-bottom: 48px;
 
 .input:focus {
  outline: none;
- box-shadow: 0px 0px 15px #ede1a1;
+ box-shadow: 0px 0px 15px rgba(0, 91, 187, 30%);
+
 }
 
 .btn {
@@ -443,6 +452,7 @@ and (max-width: 767px) {
 
   .burger_icon path {
     fill: rgb(255, 255, 255);
+    border: 1px solid;
   }
 
  .checkbox {
