--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,10 @@ h1 {
  transition: 0.5s;
 }
 
+.link_burger:hover {
+letter-spacing: 1.05em;
+}
+
 .item_burger {
   margin-bottom: 48px;
 }
@@ -354,7 +358,7 @@ h1 {
 
 .btn:hover {
   box-shadow: 0px 0px 15px #ede1a1;
-  background-color: #FFD500;
+  background-color: #f8d10b;
 
 }
 
@@ -420,7 +424,6 @@ and (max-width: 1199px) {
 }
 
 
-
 /* mobile */
 
 @media only screen
@@ -465,7 +468,7 @@ and (max-width: 767px) {
 }
 
 .burger_btn {
-  background-color:  #c7d9e4;
+  background-color:  rgba(199, 217, 228, 40%);
   border-radius: 10%;
 }
 
@@ -475,7 +478,7 @@ and (max-width: 767px) {
 }
 
 .checkbox {
-  background-color:black;
+  background-color:rgb(0, 0, 0);
   top: 0px;
   right: 3px;
 }
